<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Image"
        android:background="@drawable/ic_launcher_background"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/buy"
            android:textSize="25dp"
            android:onClick="restaurant"
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/rSpecial"
            android:textSize="25dp"
            android:onClick="special"
            android:id="@+id/employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/activity"
            android:textSize="25dp"
            android:onClick="restaurant"
            android:id="@+id/activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/purchase"
            android:textSize="25dp"
            android:onClick="restaurant"
            android:id="@+id/expansion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/stock"
            android:textSize="25dp"
            android:onClick="restaurant"
            android:id="@+id/stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_weight="0"
        android:padding="20dp"
        android:text="@string/shopInfo"
        android:textSize="25dp"
        android:onClick="restaurant"
        android:id="@+id/InfoOfShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
