<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Image"
        android:background="@drawable/ic_launcher_background"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <Button
            android:onClick="bank"
            android:id="@+id/loan"
            android:textSize="35dp"
            android:text="@string/loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="bank"
            android:id="@+id/Inquire"
            android:textSize="35dp"
            android:text="@string/Inquire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="bank"
            android:id="@+id/sell"
            android:textSize="35dp"
            android:text="@string/sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>

